atualização backend