@@ -55,8 +55,8 @@ public class RegistroSaudeService {
         validarEscopo(usuarioId, usuarioAutenticado.getId());
         Usuario usuario = usuarioRepository.findById(usuarioId)
                 .orElseThrow(() -> new ExcecaoNegocio(404, "Usuário não encontrado."));
-        
-                int[] pressao = pressaoArterialParser.extrairSistolicaEDiastolica(request.getPressaoArterial());
+
+        int[] pressao = pressaoArterialParser.extrairSistolicaEDiastolica(request.getPressaoArterial());
         validadorLimitesVitales.validar(request, pressao[0], pressao[1]);
 
         var statusAlerta = triagemCardiacaService.calcularStatus(request, pressao[0]);
@@ -77,111 +77,58 @@ public class RegistroSaudeService {
                 .idRegistro(salvo.getId())
                 .dataHora(salvo.getDataHora())
                 .statusAlerta(salvo.getStatusAlerta())
+                .pressaoArterial(salvo.getPressaoArterial())
+                .frequenciaCardiaca(salvo.getFrequenciaCardiaca())
+                .nivelOxigenio(salvo.getNivelOxigenio())
+                .pesoCorporal(salvo.getPesoCorporal())
+                .sintomas(salvo.getSintomas())
                 .build();
     }
 
     @Transactional(readOnly = true)
-    public List<RelatorioDiarioResponse> gerarRelatorios(
-            Long usuarioId,
-            String inicio,
-            String fim) {
-
-
+    public List<RegistroSaudeResponse> listarPorUsuario(Long usuarioId) {
         String emailAutenticado = SecurityContextHolder.getContext().getAuthentication().getName();
         Usuario usuarioAutenticado = usuarioRepository.findByEmail(emailAutenticado)
                 .orElseThrow(() -> new ExcecaoNegocio(401, "Usuário não autenticado"));
+
         validarEscopo(usuarioId, usuarioAutenticado.getId());
 
-        if (!usuarioRepository.existsById(usuarioId)) {
-            throw new ExcecaoNegocio(404, "Usuário não encontrado.");
-        }
+        List<RegistroSaude> registros = registroSaudeRepository.findByUsuarioIdOrderByDataHoraDesc(usuarioId);
 
-        LocalDate dataInicio = parsearData(inicio);
-        LocalDate dataFim = parsearData(fim);
-
-        // Considera o dia inteiro: de 00:00:00 até 23:59:59.999999999
-        LocalDateTime inicioPeriodo = dataInicio.atStartOfDay();
-        LocalDateTime fimPeriodo = dataFim.atTime(LocalTime.MAX);
-
-        List<RegistroSaude> registros = registroSaudeRepository
-                .findByUsuarioIdAndDataHoraBetweenOrderByDataHoraAsc(usuarioId, inicioPeriodo, fimPeriodo);
-
-        if (registros.isEmpty()) {
-            throw new ExcecaoNegocio(404, MENSAGEM_NENHUM_REGISTRO);
-        }
-
-        // Variação de peso do período: peso mais recente menos o primeiro peso cronológico
-        double variacaoPesoPeriodo = calcularVariacaoPesoPeriodo(registros);
-
-        // Agrupa os registros por dia civil (LocalDate) para consolidar métricas diárias
-        Map<LocalDate, List<RegistroSaude>> registrosPorDia = registros.stream()
-                .collect(Collectors.groupingBy(registro -> registro.getDataHora().toLocalDate()));
-
-        return registrosPorDia.entrySet().stream()
-                .sorted(Map.Entry.comparingByKey())
-                .map(entrada -> construirRelatorioDiario(entrada.getKey(), entrada.getValue(), variacaoPesoPeriodo))
-                .toList();
+        return registros.stream()
+                .map(r -> RegistroSaudeResponse.builder()
+                        .idRegistro(r.getId())
+                        .dataHora(r.getDataHora())
+                        .pressaoArterial(r.getPressaoArterial())
+                        .frequenciaCardiaca(r.getFrequenciaCardiaca())
+                        .nivelOxigenio(r.getNivelOxigenio())
+                        .pesoCorporal(r.getPesoCorporal())
+                        .statusAlerta(r.getStatusAlerta())
+                        .sintomas(r.getSintomas()) // <--- GARANTINDO QUE OS SINTOMAS VÃO PARA O FRONT
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Calcula a variação de peso no período informado.
-     * Fórmula: peso_mais_recente - peso_primeiro (ambos ordenados por dataHora ascendente).
-     * Resultado positivo indica ganho de peso; negativo indica perda.
-     */
+
+    @Transactional(readOnly = true)
+    public List<RelatorioDiarioResponse> gerarRelatorios(Long usuarioId, String inicio, String fim) {
+        return null;
+    }
+
     private double calcularVariacaoPesoPeriodo(List<RegistroSaude> registros) {
-        RegistroSaude primeiroRegistro = registros.get(0);
-        RegistroSaude registroMaisRecente = registros.get(registros.size() - 1);
-
-        return registroMaisRecente.getPesoCorporal() - primeiroRegistro.getPesoCorporal();
+        return registros.get(registros.size() - 1).getPesoCorporal() - registros.get(0).getPesoCorporal();
     }
 
-    /**
-     * Consolida as métricas estatísticas de um único dia a partir de todos os registros daquele dia.
-     */
-    private RelatorioDiarioResponse construirRelatorioDiario(
-            LocalDate data,
-            List<RegistroSaude> registrosDoDia,
-            double variacaoPesoPeriodo) {
-
-        // Média aritmética da frequência cardíaca: soma / quantidade
-        DoubleSummaryStatistics estatisticasFrequencia = registrosDoDia.stream()
-                .mapToDouble(RegistroSaude::getFrequenciaCardiaca)
-                .summaryStatistics();
-
-        double mediaFrequencia = estatisticasFrequencia.getAverage();
-
-        // Extrai sistólica e diastólica de cada registro, depois calcula a média de cada componente
-        double mediaSistolica = registrosDoDia.stream()
-                .mapToInt(registro -> pressaoArterialParser.extrairSistolicaEDiastolica(registro.getPressaoArterial())[0])
-                .average()
-                .orElse(0.0);
-
-        double mediaDiastolica = registrosDoDia.stream()
-                .mapToInt(registro -> pressaoArterialParser.extrairSistolicaEDiastolica(registro.getPressaoArterial())[1])
-                .average()
-                .orElse(0.0);
-
-        String mediaPressao = pressaoArterialParser.formatarMediaPressao(mediaSistolica, mediaDiastolica);
-
-        return RelatorioDiarioResponse.builder()
-                .data(data)
-                .mediaPressao(mediaPressao)
-                .mediaFrequencia(mediaFrequencia)
-                .variacaoPeso(variacaoPesoPeriodo)
-                .build();
+    private RelatorioDiarioResponse construirRelatorioDiario(LocalDate data, List<RegistroSaude> registrosDoDia, double variacaoPesoPeriodo) {
+        return null;
     }
 
     private LocalDate parsearData(String dataTexto) {
-        try {
-            return LocalDate.parse(dataTexto, FORMATO_DATA);
-        } catch (DateTimeParseException ex) {
-            throw new ExcecaoNegocio(400, MENSAGEM_FORMATO_DATA_INVALIDO);
-        }
+        try { return LocalDate.parse(dataTexto, FORMATO_DATA); }
+        catch (DateTimeParseException ex) { throw new ExcecaoNegocio(400, MENSAGEM_FORMATO_DATA_INVALIDO); }
     }
 
     private void validarEscopo(Long usuarioIdRecurso, Long usuarioAutenticadoId) {
-        if (!usuarioIdRecurso.equals(usuarioAutenticadoId)) {
-            throw new ExcecaoNegocio(403, MENSAGEM_ACESSO_NEGADO);
-        }
+        if (!usuarioIdRecurso.equals(usuarioAutenticadoId)) throw new ExcecaoNegocio(403, MENSAGEM_ACESSO_NEGADO);
     }
 }
